--- a/estilos.css/estilo.css
+++ b/estilos.css/estilo.css
@@ -15,6 +15,41 @@ body {
   min-height: 100%;
 }
 
+.navbar {
+  grid-area: navbar;
+  background-color: #ecf0f1;
+  display: flex;
+  justify-content: center;
+}
+.navbar .navbar-brand {
+  display: flex;
+  justify-content: start;
+  height: 40px;
+}
+.navbar .collapse {
+  background-color: #ecf0f1;
+}
+
+.header {
+  grid-area: header;
+  background-image: url(../img/gym-g436515767_1920.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  justify-content: center;
+}
+.header .titulo {
+  color: lightgrey;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 800;
+  text-shadow: 2px 5px rgb(3, 3, 3);
+  display: flex;
+  justify-content: center;
+}
+
 .grid-container > * {
   box-shadow: -1px 1px 7px 0px rgba(0, 0, 0, 0.75);
   border-radius: 4px;
@@ -50,34 +85,6 @@ body {
   text-align: center;
 }
 
-.header {
-  grid-area: header;
-  background-image: url(../img/gym-g436515767_1920.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0;
-  justify-content: center;
-}
-
-.titulo {
-  color: lightgrey;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  font-size: 30px;
-  text-transform: uppercase;
-  font-weight: 800;
-  text-shadow: 2px 5px rgb(3, 3, 3);
-  display: flex;
-  justify-content: center;
-}
-
-.navbar {
-  grid-area: navbar;
-  background-color: #ecf0f1;
-  display: flex;
-  justify-content: center;
-}
-
 .sidebar {
   grid-area: sidebar;
   background-color: whitesmoke;
@@ -97,31 +104,9 @@ body {
   justify-items: center;
 }
 
-.container-fluid {
-  color: #8395a7;
-  display: grid;
-}
-
-.navbar-brand {
-  display: flex;
-  justify-content: start;
-  height: 40px;
-}
-
-.collapse {
-  background-color: #ecf0f1;
-}
-
-.img-main {
-  opacity: 0, 39;
-  transition: opacity 3s ease 0s;
-  max-height: -webkit-max-content;
-  max-height: -moz-max-content;
-  max-height: max-content;
-}
-
-.img-main:hover {
-  opacity: 0.77;
+.imgCarrousel {
+  width: 485px;
+  height: 200px;
 }
 
 .frase-footer {
@@ -302,6 +287,10 @@ form {
   .grid-container-clases {
     grid-template: "header  header header" 100px "navbar  navbar navbar " 50px "main     main  main" auto "footer  footer footer" 100px;
   }
+  .img-clases {
+    width: 400px;
+    height: 400px;
+  }
   .grid-container-quienes {
     grid-template: "header  header header" 100px "navbar  navbar navbar " 50px "main     main  main" "footer  footer footer" 100px/200px auto 200px;
   }
@@ -424,7 +413,7 @@ form {
     padding: 5px 5px 5px 5px;
   }
   .grid-container-clases {
-    grid-template: "header  header header" 300px "navbar  navbar navbar " 50px "main     main  main" auto "footer  footer footer" 100px 200px auto 200px;
+    grid-template: "header  header header" 300px "navbar  navbar navbar " 50px "main    main  main" auto "footer  footer footer" 100px 200px auto 200px;
   }
   main {
     display: flex;
@@ -440,27 +429,36 @@ form {
     display: flex;
     padding: 10px 10px 10px 10px;
     width: 400px;
+    height: 400px;
   }
   .img2 {
     grid-area: img2;
     display: flex;
     padding: 10px 10px 10px 10px;
     width: 400px;
+    height: 400px;
   }
   .img3 {
     grid-area: img3;
     display: flex;
     padding: 10px 10px 10px 10px;
     width: 400px;
+    height: 400px;
   }
   .h2 {
     grid-area: h2;
+    width: 400px;
+    height: 400px;
   }
   .h3 {
     grid-area: h3;
+    width: 400px;
+    height: 400px;
   }
   .h4 {
     grid-area: h4;
+    width: 400px;
+    height: 400px;
   }
   .grid-container-quienes {
     grid-template: "header  header header" 300px "navbar  navbar navbar " 50px "main     main  main" auto "footer  footer footer" 100px/200px auto 200px;
