--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Pacifico&family=Pangolin&display=swap");
 @import "generales";
 @import "nav";
 @import "header";
+@import "operaciones";
 
 
 .grid-container > * {
@@ -40,11 +42,6 @@
   text-align: center;
 }
 
-.sidebar {
-  grid-area: sidebar;
-  background-color: whitesmoke;
-}
-
 .main {
   grid-area: main;
   width: 100%;
@@ -58,13 +55,6 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
-}
-
-
-
-.imgCarrousel{
-    width: 485px;
-    height: 200px;
 }
 
 .frase-footer{
@@ -94,7 +84,6 @@
     "header"  80px
     "navbar"  50px
     "main"    auto
-    "sidebar" 100px
     "footer"  50px;
 }
 /*servicios*/
@@ -104,6 +93,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+  padding-top: 4em;
 }
 
 
@@ -113,7 +103,7 @@
   transition: opacity 1s ease 0s;
   width: 200px;
   height: 200px;
-  padding: 10;
+  padding: 20px 0 0 10px;
   box-sizing: border-box;
   border-radius: 100px;
   }
@@ -186,12 +176,8 @@ form{
   color: white;
   border: none;
   border-radius: 7px;
-
 }
 
-.button :hover{
-  cursor: pointer;
-}
 
 .grid-container-quienes{
   display: grid;
@@ -207,10 +193,16 @@ form{
   justify-content: center;
   flex-basis: auto;
 }
+.textoQuienes{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 20px;
+}
 
-
-
-
+.parrafoQuienes{
+  padding-top: 20px;
+}
 
 
 @media (min-width: 600px) {
@@ -218,7 +210,7 @@ form{
    grid-template:
       "header  header" 100px
       "navbar  navbar" 50px
-      "sidebar main"   auto
+      "main    main"   auto
       "footer  footer" 100px /
       200px    auto;
   }
@@ -237,6 +229,7 @@ form{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 4em;
   }
 
   .img-serv{
@@ -331,7 +324,7 @@ form{
     grid-template:
       "header  header header"  300px
       "navbar  navbar navbar " 50px
-      "main     main  sidebar" auto
+      "main     main  main" auto
       "footer  footer footer"  100px /
       200px    auto   200px;
   }
@@ -343,8 +336,7 @@ form{
       "main     main  main"     auto
       "footer  footer footer"  100px /
       200px    auto   200px;
-
-  }
+    }
   
   .navbar-brand{
     height: 50px;
@@ -364,6 +356,7 @@ form{
     grid-template-areas: 
     "imgServ1 imgServ2  imgServ3" 
     "p1 p2 p3";  
+    padding-top: 4em;
   }
 
   .imgServ1{
@@ -473,11 +466,7 @@ form{
       "footer  footer footer"  100px 
       200px    auto   200px;
     }
-    main{
-      display: flex;
-      justify-content: center;
-
-    }
+  
     .contenido-clases{
       display: grid;
       grid-template-columns: 3fr;
@@ -488,7 +477,6 @@ form{
     .img1{
       grid-area: img1;
       display: flex;
-      padding: 10px 10px 10px 10px;
       width: 400px;
       height: 400px;
     }
@@ -496,7 +484,6 @@ form{
     .img2{
       grid-area: img2;
       display: flex;
-      padding: 10px 10px 10px 10px;
       width: 400px;
       height: 400px;
     }
@@ -505,7 +492,6 @@ form{
     .img3{
       grid-area: img3;
       display: flex;
-      padding: 10px 10px 10px 10px;
       width: 400px;
       height: 400px;
     }
@@ -547,6 +533,10 @@ form{
     .img-quienes{
       height: 400px;
       width: 400px;
+    }
+
+    .portada{
+      width: 20px;
     }
 }
   
