--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -117,6 +117,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+  padding-top: 4em;
 }
 .img-clases{
   padding: 2px 2px 2px 2px;
@@ -197,11 +198,11 @@ form{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 20px;
+  padding-top: 4em;
 }
 
 .parrafoQuienes{
-  padding-top: 20px;
+  padding-top: 4em;
 }
 
 
