--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -86,6 +86,11 @@
     "main"    auto
     "footer"  50px;
 }
+
+.portada{
+  height: 251px;
+  width: 429px;
+}
 /*servicios*/
 
 .contenido-servicios {
